--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Minecraft Server</title>
+    <title>MineUAN</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -34,7 +35,7 @@
         <h1 class="text-6xl font-bold text-blue-500 mb-6">MineUAN</h1> 
         <div class="bg-gray-700/70 p-4 rounded-lg mb-6">
             <h2 class="text-4xl font-mono text-white select-all cursor-pointer" id="serverIP">
-                play.miservidor.net
+                20.9.140.40
             </h2>
         </div>
 
@@ -48,6 +49,7 @@
 
         <div class="mt-6 text-gray-300">
             <p>¡Únete ahora y diviértete con nuestra comunidad!</p>
+            <img class="max-w-[200px] mx-auto" src="uan.png" alt="">
         </div>
     </div>
 
