--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="mt-6 text-gray-300">
             <p>¡Únete ahora y diviértete con nuestra comunidad!</p>
-            <p>Version 1.21.4!</p>
+            <p>Version 1.21.4</p>
             <img class="max-w-[200px] mx-auto" src="uan.png" alt="">
         </div>
     </div>
